<resources>
    <string name="app_name">Doctory</string>

    <string name="warning">Warning</string>
    <string name="internet_error">You are\'nt connect with internet!! Please make sure your mobile connect with stable internet</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_your_account">Sign In to your account</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="type_your_email">Type your email</string>
    <string name="type_your_password">Type your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account_and_enjoy_all_services">Create account and enjoy all services</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="type_your_username">Type your username</string>
    <string name="terms">I agree to the company <b>Term of Service</b> and <b>Privacy Policy</b></string>
    <string name="have_an_account">Have an account?</string>
    <string name="continue_btn">Continue</string>
    <string name="verify_code">Verify Code</string>
    <string name="email_verify">Please enter the code we just sent to email</string>
    <string name="phone_verify">Please enter the code we just sent to phone</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="verification">Verification</string>
    <string name="phone_number_details">Enter your phone number, we will send a authentication code</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="account_verified">Account Verified</string>
    <string name="verified_successfully">Your account has been verified succesfully, now let’s enjoy Doctory features!</string>
    <string name="forgot_details">Select verification method and we will send verification code</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="enter_your_email_we_will_send_a_verification_code_to_email">Enter your email, we will send a verification code to email</string>
    <string name="enter_your_phone_number_we_will_send_a_verification_code_to_email">Enter your phone number, we will send a verification code to email</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="create_a_new_password_that_is_safe_and_easy_to_remember">Create a new password that is safe and easy to remember</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_changed">Password Changed</string>
    <string name="password_changed_successfully">Password changed successfully, you can login again with a new password</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="waiting_rooms">waiting Rooms</string>
    <string name="appointment">Appointment</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="today_patients">Today Patients</string>
    <string name="total_patient_in">Total Patient in</string>
    <string name="see_my_schedule">See My Schedule</string>
    <string name="you_have_no_notification">You have no notification</string>
    <string name="booking_appointment">Booking Appointment</string>
    <string name="notification">Notification</string>
    <string name="see_all">See All</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="earlier_notification">Earlier Notification</string>
    <string name="schedule">Schedule</string>
    <string name="list_view">List View</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="step">Step</string>
    <string name="select_the_date">Select the Date</string>
    <string name="save_schedule">Save Schedule</string>
    <string name="select_time">Select Time</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="duration">Duration</string>
    <string name="successfully">Successfully</string>
    <string name="back_to_home">Back to Home</string>
    <string name="your_schedule_has_been_created">Your schedule has been created</string>
    <string name="all_request">All Request</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="you_have_no_any_request">You have no any request</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="booking_id">Booking ID:</string>
    <string name="personal_info">Personal Info</string>
    <string name="booking_info">Booking Info</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="appointment_type">Appointment Type</string>
    <string name="checkup_timeline">Checkup Timeline</string>
    <string name="checkup_routine">Checkup Routine</string>
    <string name="general">General</string>
    <string name="manage_settings"><![CDATA[Manage & Settings]]></string>
    <string name="settings">Settings</string>
    <string name="add_your_speciality_reason_for_visit">Add your speciality reason for visit</string>
    <string name="list_of_speciality">List of Speciality</string>
    <string name="your_license_as_a_doctor">Your license as a doctor</string>
    <string name="medical_license">Medical License</string>
    <string name="add_your_educational_background">Add your educational background</string>
    <string name="education">Education</string>
    <string name="change_your_account_information">Change your account information</string>
    <string name="account_information">Account Information</string>
    <string name="personal">Personal</string>
    <string name="contact">Contact</string>
    <string name="ecare_id">Ecare ID</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="address">Address</string>
    <string name="edit_account">Edit Account</string>
    <string name="save_changes">Save Changes</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_medical_license">Edit Medical License</string>
    <string name="add_education">Add Education</string>
    <string name="add_speciality">Add Speciality</string>
    <string name="save">Save</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="legal">Legal</string>
    <string name="logout">Logout</string>
    <string name="insurance_detail">Insurance Detail</string>
    <string name="add_your_insurance_info">Add your insurance info</string>
    <string name="pulse">Pulse</string>
    <string name="weight">Weight</string>
    <string name="kg">KG</string>
    <string name="bpm">BPM</string>
    <string name="appointments">Appointments</string>
    <string name="something_went_wrong">Something went wrong!!</string>
    <string name="required">Required!!</string>
    <string name="you_must_agree_to_our_terms_of_service_and_privacy_policy_to_make_an_account">You must agree to our terms of service and privacy policy to make an account!!</string>
    <string name="code_verified_successfully">Code verified successfully!!</string>
    <string name="we_resent_you_the_code">We resent you the code!!</string>
    <string name="verify_code_is_required">Verify code is required!!</string>
    <string name="confirm_password_do_not_match_the_new_password">Confirm password do not match the new password!!</string>
    <string name="incorrect_code">Incorrect code!!</string>
    <string name="cool_you_have_very_strong_password">Cool! You have very strong password</string>
    <string name="atleast_lowercase_or_uppercase_letters">Atleast lowercase or uppercase letters</string>
    <string name="atleast_1_number_1_9">Atleast 1 number (1-9)</string>
    <string name="minimum_8_characters">Minimum 8 characters</string>
    <string name="please_open_your_account_using_the_dashboard">Please open your account using the dashboard!</string>
    <string name="this_feature_will_be_available_soon">This feature will be available soon!</string>
    <string name="appointment_rejected_successfully">Appointment rejected successfully!!</string>
    <string name="appointment_approved_successfully">Appointment approved successfully!!</string>
    <string name="full_name">Full Name</string>
    <string name="please_fill_the_empty_fields">Please fill the empty fields!!</string>
</resources>