<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_main_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_room"
        android:icon="@drawable/ic_main_waiting"
        android:title="@string/waiting_rooms" />

    <item
        android:id="@+id/navigation_appointment"
        android:icon="@drawable/ic_main_appointment"
        android:title="@string/appointment" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_main_messages"
        android:title="@string/messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_main_profile"
        android:title="@string/profile" />

</menu>